Cherry-pick d1ec9ec68ba1. rdar://121879996

REGRESSION (273601@main): InspectorInstrumentation::instrumentingAgents() cannot use RefPtr for document
    https://bugs.webkit.org/show_bug.cgi?id=268329
    rdar://121879996

    Reviewed by Chris Dumez.

    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/inspector/InspectorInstrumentation.cpp:
    (WebCore::InspectorInstrumentation::instrumentingAgents):

    Canonical link: https://commits.webkit.org/273759@main

Identifier: 272947.659@safari-7619.1.2-branch